[gd_scene load_steps=5 format=3 uid="uid://imuovngr8tws"]

[ext_resource type="Script" path="res://Scripts/zombie.gd" id="1_kogu2"]
[ext_resource type="Texture2D" uid="uid://62mijiewk2ew" path="res://Assests/zombie movement.png" id="1_sehvo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v08n1"]
size = Vector2(23, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_tparl"]
radius = 436.018

[node name="Zombie" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_kogu2")

[node name="ZombieMovement" type="Sprite2D" parent="."]
texture = ExtResource("1_sehvo")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_v08n1")

[node name="Hearing" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hearing"]
shape = SubResource("CircleShape2D_tparl")

[node name="Vision_cone" type="Area2D" parent="."]
position = Vector2(144, 60)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vision_cone"]
position = Vector2(-138, -62)
polygon = PackedVector2Array(282, -70, 284, 38, 2, 2)

[connection signal="body_entered" from="Hearing" to="." method="_on_hearing_body_entered"]
[connection signal="body_exited" from="Hearing" to="." method="_on_hearing_body_exited"]
[connection signal="body_entered" from="Vision_cone" to="." method="_on_vision_cone_body_entered"]
[connection signal="body_exited" from="Vision_cone" to="." method="_on_vision_cone_body_exited"]
